--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,5 @@ org.gradle.jvmargs=-Xmx2G
 	mod_version = 0.0.1
 	maven_group = xyz.srgnis
 	archives_base_name = bodyhealthsystem
+
+	modmenu_version = 4.0.6
