--- a/gradle.properties
+++ b/gradle.properties
@@ -3,16 +3,16 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.19.1
-	yarn_mappings=1.19.1+build.5
-	loader_version=0.14.8
+	minecraft_version=1.19.2
+	yarn_mappings=1.19.2+build.21
+	loader_version=0.14.9
 
-	#Fabric api
-	fabric_version=0.58.5+1.19.1
+#Fabric api
+	fabric_version=0.62.0+1.19.2
 
 # Mod Properties
 	mod_version = 0.0.1
 	maven_group = xyz.srgnis
 	archives_base_name = bodyhealthsystem
-
+# Dependencies
 	modmenu_version = 4.0.6
