--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ org.gradle.jvmargs=-Xmx2G
 	fabric_version=0.62.0+1.19.2
 
 # Mod Properties
-	mod_version = 0.3.1
+	mod_version = 0.3.1-b
 	maven_group = xyz.srgnis
 	archives_base_name = bodyhealthsystem
 # Dependencies
